--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.html
@@ -105,7 +105,7 @@
 
 			<!-- Subtitles button -->
 			<button
-				*ngIf="!isMinimal && showSubtitlesButton"
+				*ngIf="!isMinimal && showSubtitlesButton && false"
 				[disabled]="isConnectionLost"
 				mat-menu-item
 				id="subtitles-btn"
