openvidu-components: Returned same url in recording pipe

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/admin/dashboard/dashboard.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/admin/dashboard/dashboard.component.css
@@ -29,6 +29,7 @@
 #sort-menu-btn {
 	margin-left: 5px;
 	background-color: var(--ov-panel-background);
+	color: var(--ov-panel-text-color);
 }
 
 .search-bar {
