openvidu-components: Fixed UI glitches on iPhones

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/session/session.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/session/session.component.html
@@ -1,4 +1,4 @@
-<div id="session-container">
+<div id="session-container" *ngIf="!preparing" @sessionAnimation>
 	<mat-sidenav-container #container #videoContainer class="sidenav-container">
 		<mat-sidenav
 			#sidenav
