--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/layout/layout.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/layout/layout.component.css
@@ -5,8 +5,8 @@
 .container {
 	height: 100%;
 }
-.withSubtitles {
-	height: calc(100% - var(--ov-captions-height, 200px)) !important;
+.withCaptions {
+	height: calc(100% - var(--ov-captions-height, 250px)) !important;
 }
 
 .layout {
