--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.html
@@ -103,17 +103,17 @@
 				<span>{{ 'TOOLBAR.BACKGROUND' | translate }}</span>
 			</button>
 
-			<!-- Subtitles button -->
+			<!-- Captions button -->
 			<button
-				*ngIf="!isMinimal && showSubtitlesButton && false"
+				*ngIf="!isMinimal && showCaptionsButton"
 				[disabled]="isConnectionLost"
 				mat-menu-item
-				id="subtitles-btn"
-				(click)="toggleSubtitles()"
+				id="captions-btn"
+				(click)="toggleCaptions()"
 			>
 				<mat-icon>closed_caption</mat-icon>
-				<span *ngIf="subtitlesEnabled">{{ 'TOOLBAR.DISABLE_SUBTITLES' | translate }}</span>
-				<span *ngIf="!subtitlesEnabled">{{ 'TOOLBAR.ENABLE_SUBTITLES' | translate }}</span>
+				<span *ngIf="captionsEnabled">{{ 'TOOLBAR.DISABLE_CAPTIONS' | translate }}</span>
+				<span *ngIf="!captionsEnabled">{{ 'TOOLBAR.ENABLE_CAPTIONS' | translate }}</span>
 			</button>
 
 			<mat-divider class="divider" *ngIf="!isMinimal && showSettingsButton"></mat-divider>
