--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/settings/audio-devices/audio-devices.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/settings/audio-devices/audio-devices.component.html
@@ -1,18 +1,25 @@
 <div class="device-container-element">
-	<button
-		mat-icon-button
-		id="microhpone-button"
-		[disabled]="!hasAudioDevices"
-		[class.warn-btn]="isAudioMuted"
-		(click)="toggleMic()"
-	>
-		<mat-icon *ngIf="!isAudioMuted" matTooltip="{{ 'TOOLBAR.MUTE_AUDIO' | translate }}" id="mic">mic</mat-icon>
-		<mat-icon *ngIf="isAudioMuted" matTooltip="{{ 'TOOLBAR.UNMUTE_AUDIO' | translate }}" id="mic_off"
-			>mic_off</mat-icon
+	<button mat-icon-button id="microhpone-button" [disabled]="!hasAudioDevices" [class.warn-btn]="isAudioMuted" (click)="toggleMic()">
+		<mat-icon
+			*ngIf="!isAudioMuted"
+			[matTooltipDisabled]="!hasAudioDevices"
+			matTooltip="{{ 'TOOLBAR.MUTE_AUDIO' | translate }}"
+			id="mic"
 		>
+			mic
+		</mat-icon>
+		<mat-icon
+			*ngIf="isAudioMuted"
+			[matTooltipDisabled]="!hasAudioDevices"
+			matTooltip="{{ 'TOOLBAR.UNMUTE_AUDIO' | translate }}"
+			id="mic_off"
+		>
+			mic_off
+		</mat-icon>
 	</button>
 	<mat-form-field>
-		<mat-label>{{ 'PREJOIN.AUDIO_DEVICE' | translate }}</mat-label>
+		<mat-label *ngIf="hasAudioDevices">{{ 'PREJOIN.AUDIO_DEVICE' | translate }}</mat-label>
+		<mat-label *ngIf="!hasAudioDevices">{{ 'PREJOIN.NO_AUDIO_DEVICE' | translate }}</mat-label>
 		<mat-select
 			[disabled]="isAudioMuted || !hasAudioDevices"
 			[value]="microphoneSelected?.device"
