--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/settings/video-devices/video-devices.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/settings/video-devices/video-devices.component.html
@@ -6,11 +6,26 @@
 		[class.warn-btn]="isVideoMuted"
 		(click)="toggleCam()"
 	>
-		<mat-icon *ngIf="!isVideoMuted" matTooltip="{{ 'TOOLBAR.MUTE_VIDEO' | translate }}" id="videocam">videocam</mat-icon>
-		<mat-icon *ngIf="isVideoMuted" matTooltip="{{ 'TOOLBAR.UNMUTE_VIDEO' | translate }}" id="videocam_off">videocam_off</mat-icon>
+		<mat-icon
+			*ngIf="!isVideoMuted"
+			[matTooltipDisabled]="!hasVideoDevices"
+			matTooltip="{{ 'TOOLBAR.MUTE_VIDEO' | translate }}"
+			id="videocam"
+		>
+			videocam
+		</mat-icon>
+		<mat-icon
+			*ngIf="isVideoMuted"
+			[matTooltipDisabled]="!hasVideoDevices"
+			matTooltip="{{ 'TOOLBAR.UNMUTE_VIDEO' | translate }}"
+			id="videocam_off"
+		>
+			videocam_off
+		</mat-icon>
 	</button>
 	<mat-form-field>
-		<mat-label>{{ 'PREJOIN.VIDEO_DEVICE' | translate }}</mat-label>
+		<mat-label *ngIf="hasVideoDevices">{{ 'PREJOIN.VIDEO_DEVICE' | translate }}</mat-label>
+		<mat-label *ngIf="!hasVideoDevices">{{ 'PREJOIN.NO_VIDEO_DEVICE' | translate }}</mat-label>
 		<mat-select
 			[disabled]="isVideoMuted || !hasVideoDevices"
 			[value]="cameraSelected?.device"
