--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/settings-panel/settings-panel.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/settings-panel/settings-panel.component.html
@@ -40,7 +40,7 @@
 				<mat-list>
 					<mat-list-item>
 						<mat-icon mat-list-icon>language</mat-icon>
-						<div mat-line>{{ 'PANEL.SETTINGS.LANGUAGE' | translate }}:</div>
+						<div mat-line>{{ 'PANEL.SETTINGS.LANGUAGE' | translate }}</div>
 						<ov-lang-selector></ov-lang-selector>
 					</mat-list-item>
 				</mat-list>
