openvidu-components: Updated test app

--- a/openvidu-components-angular/src/app/openvidu-call/call.component.html
+++ b/openvidu-components-angular/src/app/openvidu-call/call.component.html
@@ -14,7 +14,9 @@
 	(onActivitiesPanelStopRecordingClicked)="onStopRecordingClicked()"
 	(onActivitiesPanelDeleteRecordingClicked)="onDeleteRecordingClicked($event)"
 	[minimal]="false"
-	[prejoin]="true"
+	[prejoin]="false"
+	[videoMuted]="false"
+	[audioMuted]="true"
 	[activitiesPanelRecordingActivity]="true"
 	[recordingActivityRecordingsList]="recordingList"
 	[recordingActivityRecordingError]="recordingError"
