openvidu-components: Updated settings panel style on mobile devices

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/settings-panel/settings-panel.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/settings-panel/settings-panel.component.css
@@ -8,6 +8,9 @@
 	border-right: 1px solid var(--ov-secondary-color);
 	width: 170px;
 }
+.item-menu.mobile {
+	width: 50px !important;
+}
 
 .item-content {
 	padding: 16px;
