--- a/openvidu-components-angular/src/app/openvidu-call/call.component.html
+++ b/openvidu-components-angular/src/app/openvidu-call/call.component.html
@@ -13,10 +13,11 @@
 	(onActivitiesPanelStartRecordingClicked)="onStartRecordingClicked()"
 	(onActivitiesPanelStopRecordingClicked)="onStopRecordingClicked()"
 	(onActivitiesPanelDeleteRecordingClicked)="onDeleteRecordingClicked($event)"
+	(onNodeCrashed)="onNodeCrashed()"
 	[minimal]="false"
 	[prejoin]="false"
 	[videoMuted]="false"
-	[audioMuted]="true"
+	[audioMuted]="false"
 	[activitiesPanelRecordingActivity]="true"
 	[recordingActivityRecordingsList]="recordingList"
 	[recordingActivityRecordingError]="recordingError"
