--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/session/session.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/session/session.component.html
@@ -14,7 +14,7 @@
 		</mat-sidenav>
 
 		<mat-sidenav-content class="sidenav-main">
-			<div id="layout-container">
+			<div id="layout-container"  #layoutContainer>
 				<ng-container *ngTemplateOutlet="layoutTemplate"></ng-container>
 			</div>
 		</mat-sidenav-content>
